--- a/products.html
+++ b/products.html
@@ -15,9 +15,102 @@
   <header id="header"></header>
 
   <main>
-    <h1>Conheça Nossos Produtos!</h1>
+    <div class="header">
+      <h1>Granja Serra Dourada</h1>
+      <p>Conheça Nossos Produtos!</p>
+    </div>
 
-    <div class="flex-container">
+
+
+    <div class="container history-section">
+      <h2 class="section-title">Nossos Produtos</h2>
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="Imagens/ovo-granja.webp" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Imagens/ovo-granja.webp" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="Imagens/ovo-granja.webp" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+              data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+              data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+
+        </div>
+        <div class="col-md-6">
+          <div class="card-body">
+            <h5 class="card-title">Como tudo começou</h5>
+            <p class="card-text" style="text-align: justify;">
+
+              Atualmente a granja Serra Dourada possui um plantel de 170 mil aves em produção, atendendo Rondônia e
+              parte do Amazonas. A empresa está localizada na linha 10, a 27 km de Cacoal.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="mission-section">
+      <div class="container history-section">
+        <div class="row align-items-center ">
+          <div class="col-md-6">
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="Imagens/ovo-granja.webp" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="Imagens/ovo-granja.webp" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="Imagens/ovo-granja.webp" class="d-block w-100" alt="...">
+                </div>
+
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+
+          </div>
+          <div class="col-md-6">
+            <div class="card-body">
+              <h5 class="card-title">Como tudo começou</h5>
+              <p class="card-text" style="text-align: justify;">
+
+                Atualmente a granja Serra Dourada possui um plantel de 170 mil aves em produção, atendendo Rondônia e
+                parte do Amazonas. A empresa está localizada na linha 10, a 27 km de Cacoal.
+              </p>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="flex-container">
+      
       <div class="align-items-stretch">
         <img class="image" src="Imagens/ovo-granja.webp" alt="">
         <div class="produto">
@@ -39,7 +132,8 @@
           <p>Detalhes</p>
         </div>
       </div>
-    </div>
+    </div> -->
+
   </main>
 
   <footer id="footer"></footer>
