--- a/pages/contact.html
+++ b/pages/contact.html
@@ -42,6 +42,11 @@
 
         <div class="botao" style="display: flex; justify-content: center;"> <button class="btn btn-lg" id="btn-loc">Mostrar Localização</button></div>
 
+        <div class="botao" style="display: flex; justify-content: center;"> 
+        <a href="https://maps.google.com/maps?ll=-11.29014,-61.33146&amp;z=16&amp;t=h&amp;hl=pt-BR&amp;gl=BR&amp;mapclient=embed" target="_blank">
+        <button class="btn btn-lg" id="maps">Abrir Localização</button></a>
+        </div>
+        
         <div class="container" id="mapa" style="display: none;">
             <div class="content" style="width: 1830px; height: 730px;">
                 <div class="mapBox">
@@ -55,5 +60,6 @@
 
     <footer id="footer"></footer>
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
+    <script src="/js/contact.js"></script>
 </body>
 </html>
