--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="">
     <link rel="shortcut icon" href="/assets/images/logo_rounded.png" type="image/x-icon">
     <title>Quem Somos</title>
 </head>
