--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <meta name="author" content="Granja Serra Dourada">
     <meta name="robots" content="index, follow">
 
+    <meta property="og:title" content="Granja Serra Dourada">
+    <meta property="og:description" content="Granja Serra Dourada, produtora de ovos de alta qualidade em Cacoal - RO.">
+    <meta property="og:image" content="/assets/images/banner.webp">
+    <meta property="og:url" content="https://www.granjaserradourada.com.br">
+    <meta name="twitter:card" content="summary_large_image">
+
     <link rel="stylesheet" href="/css/index.css">
     <link rel="shortcut icon" href="/assets/images/logo_rounded.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -78,7 +84,7 @@
                         <a href="#" class="highlight-button">Conheça nossos ovos</a>
                     </div>
                     <div class="highlight-image">
-                        <img src="/assets/images/ovos.jpeg" alt="Ovos Caipiras">
+                        <img src="/assets/images/alimentação.webp" alt="Ovos Caipiras">
                     </div>
                 </section>
             </div>
