--- a/products.html
+++ b/products.html
@@ -81,7 +81,7 @@
               <div id="carouselExampleAutoplaying1" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner" style="border-radius: 15px;">
                   <div class="carousel-item active">
-                    <img src="/assets/images/ovo-granja.webp" class="d-block w-100" alt="...">
+                    <img src="/assets/images/apresentação e contato.webp" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
                     <img src="/assets/images/ovo-granja.webp" class="d-block w-100" alt="...">
