--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 
                 
                 <div class="" style="display: flex; justify-content: center;">
-                    <button class="btn btn-danger" id="btn-cancel">Cancelar</button> 
+                    <button class="btn btn-danger btn-lg" id="btn-cancel">Cancelar</button> 
                 </div>
             </div>
 
