--- a/contact.html
+++ b/contact.html
@@ -58,13 +58,13 @@
                       <div class="form-check">
                         <input class="form-check-input" type="checkbox" id="gridCheck">
                         <label class="form-check-label" for="gridCheck">
-                          Concordo em rebolar lentinho pros crias se enviar mensagem
+                          Bagulho dos termos
                         </label>
                       </div>
                     </div>
                     <div class="col-6">
                         <button type="submit" class="btn btn-primary">Enviar</button>
-                      <button class="btn btn-danger" id="btn-cancel">Cancelar</button> 
+                      <button type="button" class="btn btn-danger" id="btn-cancel">Cancelar</button> 
                     </div>
                   </form>
 
